--- a/Research/计算机/{1}_开发环境配置/安卓开发环境配置.md
+++ b/Research/计算机/{1}_开发环境配置/安卓开发环境配置.md
@@ -89,14 +89,23 @@ lastmod: 2024-08-07 16:37:39
 
 每个项目包含了一个或多个模块, 每个模块都是一个独立的可构建单元, 有自己的构建配置, 资源文件和源代码, 分为应用模块, 功能模块和库模块.
 
+可以通过 `File > Project Structure` 进行可视化的项目配置.
+- `Project`: 包括 `Android Gradle Plugin Version` 和 `Gradle Version` 的配置.
+- `SDK Location`: 包括  `Android SDK Location` 的位置配置.
+- `Variables`: 包括项目构建脚本中可以使用的变量, 与所有项目级和模块级 `build.gradle` 中的 `ext` 配置对应.
+- `Modules`: 包括项目中的各个模块的配置, 与 `build.gradle` 中的 `android` 配置对应
+- `Dependencies`: 包括项目中的各个模块的依赖配置, 与 `build.gradle` 中的 `dependencies` 配置对应.
+- `Build Variants`: 包括项目中的各个模块的构建变体配置, 与 `build.gradle` 中的 `buildTypes` 配置对应.
+
 #### 项目级结构及配置
 
 ```
 └── MyApp/  # Project
     ├── local.properties # 构建系统的本地环境属性
     ├── gradle/
-    │   └── wrapper/
-    │       └── gradle-wrapper.properties # Gradle 程序环境配置
+    │   ├── wrapper/
+    │   │   └── gradle-wrapper.properties # Gradle 程序环境配置
+    │   └── libs.versions.toml # Gradle 依赖版本配置(Gradle 7.0+)
     ├── gradle.properties # Gradle 程序设置
     ├── settings.gradle(.kts) # Gradle 项目配置
     ├── build.gradle(.kts) # Gradle 模块通用配置
@@ -104,6 +113,110 @@ lastmod: 2024-08-07 16:37:39
     └── .../  # 功能模块
     └── .../  # 库模块
 ```
+
+##### `build.gradle` 配置介绍 (gradle-6.5)
+
+```kotlin
+// 顶级构建文件, 可以在其中添加所有子项目/模块通用的配置选项
+
+buildscript { // 用于配置构建脚本的依赖项
+    ext {
+        kotlin_version = '1.6.10'
+    }
+    repositories {
+        google()
+        mavenCentral()
+        maven { url '...' }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+    }
+}
+
+plugins {
+    id "com.diffplug.spotless" version "5.2.0"
+}
+
+allprojects { // 用于配置所有项目的通用配置
+    repositories {
+        google()
+        mavenCentral()
+        maven { url '...' }
+    }
+}
+
+spotless {
+    kotlin {
+        target "**/*.kt"
+        ktlint(ktlintVersion).userData(['max_line_length' : '100'])
+    }
+}
+
+task clean(type: Delete) { // 用于配置自定义任务
+    delete rootProject.buildDir
+}
+```
+
+##### `build.gradle.kts` 配置介绍 (gradle-8+)
+    
+```kotlin
+// 顶级构建文件, 可以在其中添加所有子项目/模块通用的配置选项
+
+buildscript { // 用于配置构建脚本的依赖项
+    repositories {
+        google()
+        mavenCentral()
+        maven { url '...' }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+    }
+}
+
+plugins { // 用于配置项目级插件
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.jetbrains.kotlin.android) apply false
+}
+```
+
+##### `settings.gradle` 配置介绍 (gradle-6.5)
+
+```kotlin
+// 项目配置文件, 用于配置项目的模块
+
+rootProject.name = "My Application"
+includeBuild("build-logic")
+include ':app', ':my-library-module'
+```
+
+##### `settings.gradle.kts` 配置介绍 (gradle-8+)
+
+```kotlin
+// 项目配置文件, 用于配置项目的模块
+
+pluginManagement {
+    includeBuild("build-logic")
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+rootProject.name = "My Application"
+include(":app", ":my-library-module")
+```
+
 
 #### 模块级结构及配置
 
@@ -175,14 +288,91 @@ android {
 
 除了模块类型, 还可以在 `build.gradle` 中配置模块的构建配置, 如 `android` 配置, `dependencies` 配置, `buildTypes` 配置等. 一个大致完整的 `build.gradle` 文件如下.
 
+##### `build.gradle` 配置介绍 (gradle-6.5)
+
+```kotlin
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply from: 'task.gradle'
+
+android {
+    compileSdkVersion 34
+    buildToolsVersion "34.0.0"
+    defaultConfig {
+        applicationId "com.example.mylibrary"
+        minSdkVersion 24
+        targetSdkVersion 34
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionCode 1
+        versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
+
+        multiDexEnabled true
+        multiDexKeepProguard file('multidex-config.pro')
+        flavorDimensions "version"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments["dagger.hilt.disableModulesHaveInstallInCheck"] = "true"
+            }
+        }
+    }
+
+    buildTypes {
+        release {
+            debuggable false
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+
+        // Enable Coroutines and Flow APIs
+        freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
+        freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.FlowPreview"
+    }
+
+    productFlavors {
+        free {
+            dimension "version"
+            applicationIdSuffix ".free"
+            versionNameSuffix "-free"
+        }
+        paid {
+            dimension "version"
+            applicationIdSuffix ".paid"
+            versionNameSuffix "-paid"
+        }
+    }
+}
+
+dependencies {
+    compileOnly "com.google.dagger:dagger:2.37"
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation project(":my-library-module")
+    implementation files('libs/my-library.aar')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    kapt "com.google.dagger:dagger-compiler:2.37"
+}
+
+```
+
+##### `build.gradle.kts` 配置介绍 (gradle-8+)
 ```kotlin
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.jetbrains.kotlin.android)
-}
-
-ext {
-    test = 0
+    id 'com.diffplug.spotless' version '5.2.0'
 }
 
 android {
@@ -190,7 +380,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        // applicationId "com.example.myapplication3" // 应用模块需要 applicationId
+        applicationId "com.example.myapplication3" // 只有应用模块需要 applicationId
         minSdk 24
         targetSdk 34
         versionCode 1
@@ -198,14 +388,42 @@ android {
         
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        vectorDrawables {
+            useSupportLibrary = true
+        }
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        debug {
+            applicationIdSuffix = NiaBuildType.DEBUG.applicationIdSuffix
+        }
+         release {
+            isMinifyEnabled = false
+            applicationIdSuffix = NiaBuildType.RELEASE.applicationIdSuffix
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
+            // To publish on the Play store a private signing key is required, but to allow anyone
+            // who clones the code to sign and run the release variant, use the debug signing key.
+            // TODO: Abstract the signing configuration to a separate file to avoid hardcoding this.
+            signingConfig = signingConfigs.named("debug").get()
+            // Ensure Baseline Profile is fresh for release builds.
+            baselineProfile.automaticGenerationDuringBuild = true
         }
     }
+
+    packaging {
+        resources {
+            excludes.add("/META-INF/{AL2.0,LGPL2.1}")
+        }
+    }
+    testOptions {
+        unitTests {
+            isIncludeAndroidResources = true
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -213,7 +431,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    
+
+    buildFeatures {
+        viewBinding = true
+    }
+
     // 默认资源目录为src/main/res/ 或 src/debug/res/
     // 可以通过 sourceSets 配置更改资源目录
     sourceSets {
@@ -227,7 +449,7 @@ android {
 }
 
 dependencies {
-
+    compileOnly(libs.google.dagger)
     // 远程模块模块依赖
     implementation "androidx.core:core-ktx:1.7.0"
     // 项目内模块依赖
@@ -243,13 +465,29 @@ dependencies {
 }
 ```
 
-此外, 可以通过 `File > Project Structure` 进行可视化的项目配置.
-- `Project`: 包括 `Android Gradle Plugin Version` 和 `Gradle Version` 的配置.
-- `SDK Location`: 包括  `Android SDK Location` 的位置配置.
-- `Variables`: 包括项目构建脚本中可以使用的变量, 与所有项目级和模块级 `build.gradle` 中的 `ext` 配置对应.
-- `Modules`: 包括项目中的各个模块的配置, 与 `build.gradle` 中的 `android` 配置对应
-- `Dependencies`: 包括项目中的各个模块的依赖配置, 与 `build.gradle` 中的 `dependencies` 配置对应.
-- `Build Variants`: 包括项目中的各个模块的构建变体配置, 与 `build.gradle` 中的 `buildTypes` 配置对应.
+- `buildFeatures.viewBinding = true` 用于启用视图绑定功能, 通过与 XML 布局文件中的视图 ID 相关联的视图绑定类, 可以更轻松地编写代码. 例如, 如果布局文件中有一个名为 `activity_main.xml` 的布局文件, 则会生成一个名为 `ActivityMainBinding` 的绑定类, 可以通过 `ActivityMainBinding.inflate(layoutInflater)` 来加载布局文件, 并通过 `ActivityMainBinding.textView` 来访问布局文件中的 `TextView` 视图, 以避免使用 `findViewById` 方法.
+    ```kotlin
+    import android.os.Bundle
+    import androidx.appcompat.app.AppCompatActivity
+    import com.example.app.databinding.ActivityMainBinding
+
+    class MainActivity : AppCompatActivity() {
+
+        private lateinit var binding: ActivityMainBinding
+
+        override fun onCreate(savedInstanceState: Bundle?) {
+            super.onCreate(savedInstanceState)
+            binding = ActivityMainBinding.inflate(layoutInflater)
+            setContentView(binding.root)
+
+            binding.button.setOnClickListener {
+                binding.textView.text = "Button clicked!"
+            }
+        }
+    }
+    ```
+- `packaging.resources.excludes.add("/META-INF/{AL2.0,LGPL2.1}")` 用于排除 APK 文件中的特定文件, 如 `META-INF` 目录下的 `AL2.0` 和 `LGPL2.1` 文件, 以避免与其他库的冲突.
+
 
 #### 资源管理
 
