--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -318,7 +318,7 @@ Android 应用程序由四个主要组件组成:
 
 ## 项目架构
 
-## 应用架构
+### 架构原则
 
 原则:
 - 组件分离
@@ -330,45 +330,313 @@ Android 应用程序由四个主要组件组成:
 - 单一数据源
   - 分配单一的数据持有者
   - 只有持有者可以修改或转变数据, 修改尽量通过提供接口来实现
-架构结构:
+
+### 架构结构
+
 UI Layer(界面层, 唯一职责是使用和显示界面状态)
-- 界面: 使用 View 或 Jetpack Compose 等构建视图元素来呈现数据.
-- 界面状态: 由状态容器提供, 向界面提供数据(_UiState, 类似于 Model, 尽可能是不可变的.).
-  - 状态流(LiveData 或 StateFlow(MutableStateFlow)): 通过数据流, 以协程为基础, 利用定义的挂起函数异步的生成和使用值, 从而从确保数据从 ViewModel 流向 UI, UI 只能观察数据的变化, 而不能直接修改数据.
+- 界面: 使用 `View` 或 `Jetpack Compose` 等构建视图元素来呈现数据.
+  - 界面会向状态容器发送用户事件通知, 状态容器会处理事件对应的逻辑并更新界面状态. 
+  - 界面通过使用适当的生命周期感知型协程构建器从状态容器收集最新的界面状态(View: `repeatOnLifecycle`, Compose: `collectAsStateWithLifecycle`). (循环往复)
+  - 如果界面不可见或未处于活动状态，除非明确要求，否则状态生成和收集的过程可以暂停, 防止消耗任何资源. (生命周期感知型协程构建器会自动控制)
+  - 不要替换 activity 或 fragment 的生命周期方法, 可以改为使用 `LifecycleObserver` 监听生命周期事件. 或是通过 `repeatOnLifecycle` 来监听生命周期状态事件(`CREATED`、`DESTROYED`、`INITIALIZED`、`RESUMED`、`STARTED`).
+- 界面状态: 由状态容器提供, 向界面提供数据(`_UiState`, 类似于 `Model`, 尽可能是不可变的.).
   - 要显示的数据, 控制是否要展示的状态, 控制是否要跳转的状态, 界面的回调函数, 界面的补充信息(突然要弹窗展示的信息)
 - 状态容器: 负责存储和提供界面状态, 并且包含执行相应任务所必需的处理逻辑.
-  - 业务逻辑状态容器(ViewModel): 处理用户事件, 将数据从数据层或网域层转换为屏幕界面状态. 在 Activity 重新创建后保留其状态和状态处理流水线。如果会重新创建状态容器，但无法保留其状态，则状态容器必须能够轻松地重新创建最近一个状态。
-  - 界面逻辑状态容器(普通类): 与界面本身具有相同的生命周期, 存储不需要长期保留的界面状态.
+  - 状态容器分两种, 一种由普通的类实现(界面逻辑状态容器), 绑定到界面的生命周期, 存储不需要长期保留的界面状态和界面逻辑. 一个种由 `ViewModel` 实现(业务逻辑状态容器), 用于处理业务逻辑, 将数据从数据层或网域层转换为屏幕界面状态, 通过数据流向界面提供数据, 通过回调函数向界面提供事件处理逻辑.
+  - `ViewModel` 不要放入容器视图的适配器中, 会增加耦合, 可以通过采用回调的方式(界面状态中放回调或适配器定义回调参数)进行.
+  - 在 `ViewModel` 中应该立即处理事件，并通过事件的处理结果引发状态更新, 而不能将来自 `ViewModel` 的事件发送到界面.
+  - `ViewModel` 不要存储对任何与生命周期相关的类型的引用, 如 `Activity`, `Fragment`, `Context` 或 `Resources` 作为依赖项传递. 因为 `ViewModel` 生命周期长, 持有的引用在设备状态更改导致被销毁重建时, 旧实例无法被垃圾回收.
+  - `ViewModel` 通过数据流(`StateFlow`, `LiveData`)向界面提供界面状态数据, 通过回调函数向界面提供事件处理逻辑.
+  - `ViewModel` 通过内置的协程作用域 `viewModelScope` 来执行异步任务(`suspend` 函数), 如从数据源获取数据以及更新界面状态数据.
+  - `ViewModel` 应该在屏幕级别的组件中使用, 如 `activity`, `fragment` 等屏幕级别的组件. 对于嵌套的 `fragment`, 如果与父级共享一个 `ViewModel`, 可以通过 `ViewModelProvider` 来获取父级 `fragment` 的 `ViewModel`.
 - 界面事件(包括用户交互、本地资源状态改变、外部资源状态改变产生的事件等)
   - 如果事件需要执行界面逻辑（与修改界面元素的状态相关, 如可展开项的状态），界面便可以直接处理这些事件。
-  - 如果事件需要执行业务逻辑（如刷新屏幕上的数据, 更新数据库数据），则应用由 ViewModel 处理此事件。
-- 设计原则
-  - 界面会向状态容器发送用户事件通知, 状态容器会处理事件对应的逻辑并更新界面状态. 更新后的界面状态将反馈给界面以进行呈现. (循环往复)
-  - 如果界面不可见或未处于活动状态，除非明确要求，否则状态生成流水线不应消耗任何资源。
-  - ViewModel 尽量不要放入容器视图的适配器中, 会增加耦合, 可以通过采用回调的方式(界面状态中放回调或适配器定义回调参数)进行.
+  - 如果事件需要执行业务逻辑（如刷新屏幕上的数据, 更新数据库数据），则应用由 `ViewModel` 处理此事件。
 
-- Domain Layer(网域层, 负责封装复杂的业务逻辑, 或者由多个 ViewModel 重复使用的简单业务逻辑)
-  - 合并数据层的多个存储库数据
-  - 存储可重复使用的简单业务逻辑, 相比于存放在 Utils 类中, 使得业务逻辑更加清晰, 便于维护.
-- Data Layer
-  - 由多个存储库(Repositories)组成，其中每个存储库都可以包含零到多个数据源(Data Sources).
-  - 存储库负责处理数据变化, 解决不同数据源冲突, 对数据源抽象化处理, 编码业务逻辑, 提供公开数据访问的函数接口.
-  - 每个数据源类仅负责处理一个数据源, 数据源可以是文件、网络来源或本地数据库, 且只能由存储库访问.
-  - 多个存储库可以组合成一个 Manager 存储库, 以便在一个存储库中处理多个数据源.
-  - 数据源尽可能包含本地数据源和远程数据源, 以便在没有网络连接时使用本地数据源.
-  - 调用数据源或存储库时, 需要通过协程或多线程来异步获取数据, 以避免阻塞主线程. 耗时长的操作可以通过 `WorkManager` 来执行. 比如在程序启动时在后台逐一初始化数据源, 以避免启动时的卡顿.
-  - 从网络数据源读取数据时, 可以通过指数退避算法需要处理网络连接失败、超时等异常情况.
-- 依赖管理
-  - 通过构造函数注入或 Hilt 库进行依赖注入
-  - 依赖注入使类能够定义其依赖项而不构造它们。在运行时，另一个类负责提供这些依赖项.
-  - 服务定位器: 服务定位器模式提供了一个注册表，类可以从中获取其依赖项而不构造它们.
+Domain Layer(网域层, 负责封装复杂的业务逻辑, 或者由多个 `ViewModel` 重复使用的简单业务逻辑)
+- 合并数据层的多个存储库数据
+- 存储可重复使用的简单业务逻辑, 相比于存放在 `Utils` 类中, 使得业务逻辑更加清晰, 便于维护.
 
+Data Layer(数据层, 负责处理数据的获取和存储)
+- 由多个存储库(`Repositories`)组成，其中每个存储库都可以包含零到多个数据源(`Data Sources`).
+- 存储库负责处理数据变化, 解决不同数据源冲突, 对数据源抽象化处理, 编码业务逻辑, 提供公开数据访问的函数接口.
+- 每个数据源类仅负责处理一个数据源, 数据源可以是文件、网络来源或本地数据库(数据库、`DataStore`、`SharedPreferences`、Firebase API、GPS 位置信息提供程序、蓝牙数据提供程序、网络连接状态提供程序), 且只能由存储库访问.
+- 多个存储库可以组合成一个 Manager 存储库, 以便在一个存储库中处理多个数据源.
+- 数据源尽可能包含本地数据源和远程数据源, 以便在没有网络连接时使用本地数据源.
+- 调用数据源或存储库时, 推荐通过协程(或多线程)来异步获取数据以及与保持数据在不同层之间的流动, 以避免阻塞主线程. 耗时长的操作可以通过 `WorkManager` 来执行. 比如在程序启动时在后台逐一初始化数据源, 以避免启动时的卡顿.
+- 从网络数据源读取数据时, 可以通过指数退避算法需要处理网络连接失败、超时等异常情况.
+
+#### 生命周期感知型组件
+
+`Activity` 或 `Fragment` 通常会在其生命周期中执行一些操作, 如初始化数据、加载数据、释放资源等. 普通的生命周期方法在编写时会导致代码冗长, 比如初始化和释放资源的代码分散在了多个生命周期方法中, 使代码难以维护. 不同声明周期方法是异步执行的, 因为执行时间不同, 有时候可能会导致不同的生命周期方法之间的数据不一致.
+
+生命周期感知型组件用于解决这些问题, 通过 `Lifecycle`(`LifecycleRegistry` 是其具体实现的类) 和 `LifecycleObserver`(`DefaultLifecycleObserver` 和 `LifecycleEventObserver` 是其具体实现的类) 来观察和响应具有生命周期变化的组件(如 `Activity` 或 `Fragment`等实现了 `LifecycleOwner` 接口的组件)的生命周期事件, 从而在生命周期状态发生变化时执行相应的操作.
+
+- `Lifecycle`(`LifecycleRegistry`) 存储了具有生命周期变化的组件的生命周期状态, 并且可以在生命周期状态发生变化时通知所有注册的 `LifecycleObserver` 对象. 通过`addObserver()` 方法来添加 `LifecycleObserver` 对象, 通过 `removeObserver()` 方法来移除 `LifecycleObserver` 对象.
+- `DefaultLifecycleObserver` 是一个接口, 用于观察具有生命周期变化的组件的生命周期事件, 从而在生命周期状态发生变化时执行相应的操作. 通过实现 `LifecycleObserver` 接口并重写 `onCreate()`, `onStart()`, `onResume()`, `onPause()`, `onStop()`, `onDestroy()` 等方法来执行相应的操作. 
+- `LifecycleEventObserver` 是一个接口, 用于观察具有生命周期变化的组件的生命周期事件, 从而在生命周期状态发生变化时执行相应的操作. 通过实现 `LifecycleEventObserver` 接口并重写 `onStateChanged()` 方法来执行相应的操作. 如果同时实现了 `DefaultLifecycleObserver` 接口, 则 `DefaultLifecycleObserver` 的方法会优先执行.
+
+注意事项:
+- 当 `onSaveInstanceState()` 被调用时, Android 认为当前的 UI 状态应该被保存, 因此不建议在这之后再更改 UI. 然而, `onStop()` 通常在 `onSaveInstanceState()` 之后调用, 此时 `Lifecycle` 会从 `RESUMED` 变为 `CREATED`, 分发 `ON_STOP` 事件. 如果在 `onSaveInstanceState()` 和 `onStop()` 之间对 UI 进行更改, 可能导致应用导航状态不一致. [这是个问题](https://developer.android.com/topic/libraries/architecture/lifecycle?hl=zh-cn#onStop-and-savedState)!
+
+```kotlin
+class MyObserver : DefaultLifecycleObserver {
+    override fun onCreate(owner: LifecycleOwner) {
+        // 在 onCreate() 方法中执行初始化操作
+    }
+
+    override fun onDestroy(owner: LifecycleOwner) {
+        // 在 onDestroy() 方法中执行释放资源操作
+    }
+}
+
+class MyActivity : AppCompatActivity() {
+    private val myObserver = MyObserver()
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        lifecycle.addObserver(myObserver) // getLifecycle()
+    }
+
+    override fun onDestroy() {
+        super.onDestroy()
+        lifecycle.removeObserver(myObserver)
+    }
+}
+```
+
+每个 ` LifecycleOwner` 对象都有一个协程作用域, 可以通过 `lifecycleScope` 属性来获取; 每一个 `ViewModel` 对象都有一个协程作用域, 可以通过 `viewModelScope` 属性来获取.
+生命周期感知型组件的协程作用域用于在生命周期范围内启动协程, 以便在生命周期状态发生变化时取消协程.
+
+如果需要在 `LifecycleOwner` 对象只要进入到指定的生命周期状态就执行某个操作, 可以使用 `repeatOnLifecycle()` 函数, 该函数会在 `LifecycleOwner` 对象进入到指定的生命周期状态时执行指定的操作, 并且会在 `LifecycleOwner` 对象退出指定的生命周期状态时取消操作.
+
+```kotlin
+class MyActivity : AppCompatActivity() {
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+
+        lifecycleScope.launch {
+
+            // 随状态变化而反复执行
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                // 在 STARTED 状态下执行操作
+            }
+
+            // 单次长时间操作, 随状态变化可恢复运行直到运行完成
+            whenStarted {
+                // 在第一次 STARTED 状态下执行操作
+            }
+
+            whenResumed {
+                // 在第一次 RESUMED 状态下执行操作
+            }
+
+            whenCreated {
+                // 在第一次 CREATED 状态下执行操作
+            }
+        }
+    }
+}
+
+class MyFragment : Fragment() {
+    override fun onViewCreated(view: View, savedInstanceState: Bundle?) {
+        super.onViewCreated(view, savedInstanceState)
+
+        viewLifecycleOwner.lifecycleScope.launch {
+            viewLifecycleOwner.repeatOnLifecycle(Lifecycle.State.STARTED) {
+                // 在 STARTED 状态下执行操作
+            }
+        }
+    }
+}
+
+class MyViewModel : ViewModel() {
+    init {
+        viewModelScope.launch {
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                // 在 STARTED 状态下执行操作
+            }
+        }
+    }
+}
+```
+
+
+#### ViewModel(未完成)
+
+`ViewModel` 是一个用于持久存储界面相关状态数据, 处理界面业务逻辑的类. 防止因为 `activity` 或 `fragment` 的重建而导致数据丢失. 同时, `ViewModel` 的作用域被限定为 `ViewModelStoreOwner` 的生命周期范围内, 通常是 `activity` 或 `fragment` 的生命周期范围内. 只有在 `activity` 或 `fragment` 在非配置更改的情况下被销毁时, `ViewModel` 才会被销毁, 比如调用 `finish()` 方法.
+
+```kotlin
+class MyViewModel : ViewModel() {
+    private val _data = MutableStateFlow<String>()
+    val data: StateFlow<String> = _data.asStateFlow()
+
+    fun updateData(newData: String) {
+        _data.value = newData
+    }
+}
+
+class MyActivity : AppCompatActivity() {
+    private val viewModel: MyViewModel by viewModels() // 使用 by viewModels() 代理属性来获取 ViewModel 实例, 这通常在 onCreate() 之前
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+
+        viewModel = ViewModelProvider(this).get(SimpleViewModel::class.java) // 使用 ViewModelProvider 手动创建 ViewModel 实例
+
+
+        lifecycleScope.launch {
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                viewModel.data.collect { data ->
+                    // 更新界面数据
+                }
+            }
+        }
+    }
+}
+```
+
+因为 `ViewModelProvider` 只能通过默认的无参构造函数来创建 `ViewModel` 实例. 当 `ViewModel` 需要依赖外部组件时, 可以通过构造函数注入或 Hilt 库进行依赖注入, 并只能通过 `ViewModelProvider.Factory` 来创建 `ViewModel` 实例.
+
+```kotlin
+class MyViewModel @ViewModelInject constructor(
+    private val repository: MyRepository
+) : ViewModel() {
+    private val _data = MutableStateFlow<String>()
+    val data: StateFlow<String> = _data.asStateFlow()
+
+    fun updateData(newData: String) {
+        _data.value = newData
+    }
+}
+
+class MyViewModelFactory @Inject constructor(
+    private val repository: MyRepository
+) : ViewModelProvider.Factory {
+    override fun <T : ViewModel?> create(modelClass: Class<T>): T {
+        if (modelClass.isAssignableFrom(MyViewModel::class.java)) {
+            return MyViewModel(repository) as T
+        }
+        throw IllegalArgumentException("Unknown ViewModel class")
+    }
+}
+
+class MyActivity : AppCompatActivity() {
+    private val viewModel: MyViewModel by viewModels { MyViewModelFactory(repository) } // 使用 by viewModels() 代理属性来获取 ViewModel 实例, 这通常在 onCreate() 之前
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+
+        var factory = MyViewModelFactory(repository)
+        viewModel = ViewModelProvider(this, factory).get(SimpleViewModel::class.java) // 使用 ViewModelProvider 手动创建 ViewModel 实例
+
+        lifecycleScope.launch {
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                viewModel.data.collect { data ->
+                    // 更新界面数据
+                }
+            }
+        }
+    }
+}
+
+```
+
+可以通过 `SavedStateHandle` 在 `ViewModel` 中保存和恢复与界面状态相关的数据, 避免因为系统因内存不足等原因终止应用程序时导致的数据丢失, 从而在重启应用程序时恢复数据.
+
+
+#### LiveData(未完成)
+
+`LiveData` 是一种可观察的数据存储器类, 可以感知 `LifecycleOwner` 的生命周期状态, 并且只在 `LifecycleOwner` 处于活动状态时通知观察者.
+`MutableLiveData` 是 `LiveData` 的子类, 用于存储可变数据, 并且可以通过 `setValue()` 或 `postValue()` 方法来更新数据.
+
+```kotlin
+class MyViewModel : ViewModel() {
+    private val _data = MutableLiveData<String>()
+    val data: LiveData<String> = _data
+
+    fun updateData(newData: String) {
+        _data.value = newData
+    }
+}
+
+class MyActivity : AppCompatActivity() {
+    private val viewModel: MyViewModel by viewModels()
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+
+        val observer = Observer<String> { data ->
+            // 更新界面数据
+
+        }
+        viewModel.data.observe(this, observer)
+    }
+}
+```
+
+#### StateFlow
+
+`StateFlow` 是一种可观察的数据存储器类, 可以感知 `LifecycleOwner` 的生命周期状态, 并且只在 `LifecycleOwner` 处于活动状态时通知观察者.
+`MutableStateFlow` 是 `StateFlow` 的子类, 用于存储可变数据, 并且可以通过 `value` 属性来更新数据.
+
+```kotlin
+class MyViewModel : ViewModel() {
+    private val _data = MutableStateFlow<String>("")
+    val data: StateFlow<String> = _data.asStateFlow()
+
+    fun updateData(newData: String) {
+        _data.value = newData
+    }
+}
+
+class MyActivity : AppCompatActivity() {
+    private val viewModel: MyViewModel by viewModels()
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+
+        lifecycleScope.launch {
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                viewModel.data.collect { data ->
+                    // 更新界面数据
+                }
+            }
+        }
+    }
+}
+```
+
+### 依赖管理
+- 通过构造函数注入或 Hilt 库进行依赖注入
+- 依赖注入使类能够定义其依赖项而不构造它们。在运行时，另一个类负责提供这些依赖项.
+- 服务定位器: 服务定位器模式提供了一个注册表，类可以从中获取其依赖项而不构造它们.
+
+### 项目测试
+- 测试内容
+  - 对 ViewModel（包括 Flow）进行单元测试
+  - 对数据层实体进行单元测试。即对代码库和数据源进行单元测试
+  - 进行界面导航测试（可在持续集成环境中用作回归测试）
+  - 测试 StateFlow 和 LiveData 的行为
+    - 尽可能对 value 属性进行断言
+    - 如果使用 WhileSubscribed，您应该创建一个 collectJob
+
+### 模块组织
+- 项目模块化: 将应用程序拆分为多个模块, 以便更容易管理和维护, 以下是从高到低的模块组织结构:
+  - 应用模块(app): 包含界面入口点, 依赖于功能模块, 支持产品变种(`productFlavors`), 编译为不同的二进制文件, 如不同设备或不同版本的 APK 文件, 以及不同的构建类型(`buildTypes`), 如调试和发布版本.
+  - 功能模块(feature): 包含特定功能的代码, 可以独立编译和测试, 依赖于数据模块.
+  - 数据模块(data): 包含存储库(`Repository`)、数据源(`DataSource`)和模型类(`Model`), 用于封装特定领域的所有数据和业务逻辑, 将存储库公开为外部 API.
+  - 通用模块(core): 包含应用程序中多个模块之间共享的代码, 如工具类、扩展函数、自定义视图等.
+  - 测试模块(test): 包含单元测试和 UI 测试, 用于测试应用程序的各个部分.
+- 注意事项:
+  - 模块间需要相互依赖并通信时, 可以通过将相关逻辑放在另一个中介模块中进行解耦, 以避免直接依赖. 同时此中介模块可以被其他任何需要此逻辑的模块复用.
+  - 高级模块(业务逻辑)不应该直接依赖于低级模块的具体实现, 而是应该依赖于其抽象接口. 这样可以方便低级模块的替换, 扩展和测试. 具体项目中可以同时创建一个 `api` 模块和一个 `impl` 模块, `api` 模块定义接口, `impl` 模块实现接口.
 
 
 ()[!https://developer.android.com/static/topic/libraries/architecture/images/mad-arch-ui-udf-in-action.png?hl=zh-cn]
 
 
-架构使用方式:
+### 架构代码样例
 
 
 ```
@@ -698,7 +966,10 @@ class NewsTasksDataSource(
 
 ## UI
 
-应用的界面 (UI) 就是您在屏幕上所看到的内容（文本、图片、按钮和许多其他类型的元素）及其在屏幕上的布局方式。
+应用的界面 (UI) 就是您在屏幕上所看到的内容（文本、图片、按钮和许多其他类型的元素）及其在屏幕上的布局方式.
+
+
+### 界面状态保存
 
 ### 临时存放
 
