--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -1501,9 +1501,17 @@ class MainActivity : AppCompatActivity() {
 - 深度链接支持(深度链接时, 现有返回堆栈都将被删除, 基于导航图重建新的返回堆栈)
 
 组成:
-- Host: `NavHostFragment` 和 `NavHost`, 存储所有导航目的地对象的容器
+- Host: `NavHostFragment` 和 `NavHost`, 用来存储和展示所有导航目的地对象的 `Fragment` 容器组件, 使用时需要手动指定导航图
+  - `navGraph` 属性绑定导航图
+  - `defaultNavHost` 属性设置为 true, 以便使得此导航组件首先处理系统返回键事件.
 - Graph: `NavGraph`, 定义导航目的地连接关系的数据结构, 构成一个导航图
+  - 目的地类型: `fragment`, `activity`, `dialog`. 
+    - `fragment`, 目的对象充满整个 Host 区域
+    - `activity`, 退出导航图所在的 `Activity`, 启动一个新的 `Activity`
+    - `dialog`, 展示在之前的内容上方
 - Controller: `NavController`, 管理目的地之间导航, 处理深层链接, 处理返回堆栈等的协调员
+  - 保存导航图并公开允许您的应用程序在图中的目的地之间移动的方法
+  - 使用导航组件时，您可以使用 NavController 类创建导航控制器。 NavController 是中央导航 API。它跟踪用户访问过的目的地，并允许用户在目的地之间移动。
 - Destination: `NavDestination`, 导航图中的节点, 通常在构建导航图时创建
 - Route: 任何可序列化的数据类型, 通过 Route 进行导航到达目的地
 
@@ -1511,8 +1519,6 @@ class MainActivity : AppCompatActivity() {
 - `Hosted` 会使得目的内容占满整个导航内容区域
 - `Dialog` 会使得目的内容展示在之前的内容上方
 - `Activity` 会退出导航图所在的 Activity, 启动一个与导航组件分开管理的新 Android 活动
-
-```kotlin
 
 
 ### androidx 分页组件(paging)
