--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -1523,11 +1523,342 @@ class MainActivity : AppCompatActivity() {
 
 ### androidx 分页组件(paging)
 
+### 自定义 View
+
+通常的自定义 View 流程:
+- 继承自 `View` 或者 `ViewGroup` 类
+
+```kotlin
+/**
+ * 自定义 View
+ * params context 应用上下文
+ * params attrs 属性集合, 用于在 xml 中使用自定义组件时, 为组件传递自定义属性(不使用时, 可以传递 null)
+ * params defStyleAttr 默认样式, 用于在 xml 中使用自定义组件时, 为组件传递默认样式. 可以通过在 xml 中设置 style 属性来覆盖默认样式.
+ */
+class MyView(context: Context, attrs: AttributeSet, defStyleAttr: Int) : View(context, attrs, defStyleAttr) {
+    // 1. 定义属性
+    private var mText: String = ""
+
+    // 2. 初始化属性
+    init {
+        val typedArray = context.obtainStyledAttributes(attrs, R.styleable.MyView, defStyleAttr, 0)
+        mText = typedArray.getString(R.styleable.MyView_text) ?: ""
+        typedArray.recycle()
+    }
+}
+
+// 使用
+<com.example.MyView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:text="Hello World!" />
+
+val myView = MyView(context).apply {
+    text = "Hello World!"
+    layoutParams = ViewGroup.LayoutParams(ViewGroup.LayoutParams.WRAP_CONTENT, ViewGroup.LayoutParams.WRAP_CONTENT)
+}
+```
+
+
+- 重写 `override fun onMeasure(widthMeasureSpec: Int, heightMeasureSpec: Int)` 方法, 在其中测量自定义 View 的大小
+- 重写 `override fun onDraw(canvas: Canvas?)` 方法, 在其中绘制自定义 View 的内容
+- 重写 `override fun onLayout(changed: Boolean, left: Int, top: Int, right: Int, bottom: Int)` 方法, 在其中布局自定义 View 的子 View
+- 重写 `override fun onTouchEvent(event: MotionEvent?): Boolean` 方法, 在其中处理自定义 View 的触摸事件
+
+#### `onMeasure` 方法
+
+> [!cite]
+>
+> [onMeasure详解](https://blog.csdn.net/dmk877/article/details/49558367)
+
+每个视图都有一个 `onMeasure` 方法, 用于测量视图的大小, 并通过 `setMeasuredDimension(width, height)` 方法设置视图的最终大小. 视图的大小由两部分组成: 宽度和高度, 其最终大小会受到父视图的测量要求 `MeasureSpec`(大小和模式), 视图自身的 `LayoutParams` 以及视图内容等因素的影响. 
+- `MeasureSpec.EXACTLY` 精确模式, 视图大小是确定的, 由 `MeasureSpec.getSize()` 获取. 对应布局属性 `match_parent` 或者 `具体数值dp`
+- `MeasureSpec.AT_MOST` 最大模式, 视图大小不能超过 `MeasureSpec.getSize()`, 通常是父视图的大小. 对应布局属性 `wrap_content`.
+- `MeasureSpec.UNSPECIFIED` 未指定模式, 视图大小不受限制, 可以任意大小. 通常用于 `ScrollView` 中的子视图.
+
+```java
+protected void onMeasure(int widthMeasureSpec, int heightMeasureSpec) {
+    setMeasuredDimension(getDefaultSize(getSuggestedMinimumWidth(), widthMeasureSpec),
+            getDefaultSize(getSuggestedMinimumHeight(), heightMeasureSpec));
+}
+
+private void setMeasuredDimension(int measuredWidth, int measuredHeight) {
+    mMeasuredWidth = measuredWidth;
+    mMeasuredHeight = measuredHeight;
+}
+```
+
+最根源的父视图是 `Activity` 绑定的 `Window` 视窗内的 `DecorView`. `Window` 视窗用于包含和管理应用的窗口内容有关的所有视图; `DecorView` 是一个继承自 `FrameLayout` 类型的根布局, 它的大小一般是手机屏幕的大小. 
+
+```java
+public class Activity ... { ...
+    mWindow = new PhoneWindow(this, window, activityConfigCallback);
+    public void setContentView(@LayoutRes int layoutResID) {
+        mWindow.setContentView(layoutResID);
+        initWindowDecorActionBar();
+    }
+}
+
+public class PhoneWindow ... { ...
+    public void setContentView(int layoutResID) {
+        installDecor();
+    }
+
+    private void installDecor() {
+        if (mDecor == null) {
+            mDecor = new DecorView(context, -1, this, getAttributes());;
+        }
+        if (mContentParent == null) {
+            ViewGroup contentParent = (ViewGroup)findViewById(ID_ANDROID_CONTENT);
+            mContentParent = generateLayout(mDecor);
+        }
+    }
+}
+```
+
+此外 `PhoneWindow` 又有一个 `mContentParent: FrameLayout` 容器, 用于存放实际的应用内容区域的视图, 大小通常是 `DecorView` 的大小减去状态栏和导航栏的高度.
+
+`DecorView extends FrameLayout -> ViewGroup -> View` 也是个视图, 同时它也就有自己的 `onMeasure` 方法来测量自己的大小. 但是 `DecorView` 并没有父视图, 那么它的大小是怎么确定的呢?
+
+首先每一个 `View` 都会通过 `measure(widthMeasureSpec, heightMeasureSpec)` 方法来测量自己的大小, 因此只需要搞清楚这里的 `widthMeasureSpec` 和 `heightMeasureSpec` 的来源即可. 这里需要去追溯到 `ViewRootImpl`.
+
+在 `PhoneWindow` 创建的同时, 会创建一个 `ViewRootImpl` 对象自动与 `DecorView` 绑定, 用于管理当前窗口内部视图树内所有视图的绘制和事件分发. 而 `DecorView` 就可以通过 `getViewRootImpl()` 通过得到的 `ViewRootImpl` 对象来触发 `ViewRootImpl` 的 `performTraversals()` 方法来重新测量自己的大小.
+
+```java
+public class PhoneWindow ... { ...
+    private void openPanel(final PanelFeatureState st, KeyEvent event) {
+        ...
+        final WindowManager wm = getWindowManager();
+        wm.addView(st.decorView, lp);
+        ...
+    }
+}
+
+// WindowManagerImpl
+public final class WindowManagerGlobal { ...
+    public void addView(View view, ViewGroup.LayoutParams params, ...) {
+        ViewRootImpl root;
+        root = new ViewRootImpl(view.getContext(), display);
+        mViews.add(view);
+        mRoots.add(root);
+        ...
+    }
+}
+```
+
+`ViewRootImpl` 会在自己的 `performTraversals()` 方法中计算 `DecorView` 需要的根测量规格 `childWidthMeasureSpec` 或 `childHeightMeasureSpec`.
+
+简单来说这两个测量规格的计算取决于窗口的类型, 如果是特殊窗口类型, 直接使用设备的宽高, 如果是 `WRAP_CONTENT` 类型, 则扣除系统栏的高度后, 当前窗口在屏幕上显示的实际矩形区域, 其他情况直接使用 `WindowManager` 获取的屏幕尺寸. 具体的计算还有更多细节.
+
+然后 `ViewRootImpl` 会利用计算好的根测量规格调用 `performMeasure()` 方法来执行 `DecorView` 的 `measure(...)` 方法, 从而使得 `DecorView` 根据根测量规格来测量自己的大小.
+
+```java
+public final class ViewRootImpl ... {
+    private void performTraversals() {
+        ...
+        int desiredWindowWidth;
+        int desiredWindowHeight;
+        Rect frame = mWinFrame;
+        if (mFirst) {
+            final Configuration config = mContext.getResources().getConfiguration();
+            if (shouldUseDisplaySize(lp)) {
+                Point size = new Point();
+                mDisplay.getRealSize(size);
+                desiredWindowWidth = size.x;
+                desiredWindowHeight = size.y;
+            } else if (lp.width == ViewGroup.LayoutParams.WRAP_CONTENT
+                    || lp.height == ViewGroup.LayoutParams.WRAP_CONTENT) {
+                desiredWindowWidth = dipToPx(config.screenWidthDp);
+                desiredWindowHeight = dipToPx(config.screenHeightDp);
+            } else {
+                desiredWindowWidth = frame.width();
+                desiredWindowHeight = frame.height();
+            }
+        } else {
+            desiredWindowWidth = frame.width();
+            desiredWindowHeight = frame.height();
+        }
+
+        // Ask host how big it wants to be
+        windowSizeMayChange |= measureHierarchy(mView, layoutParams, contextResources,
+                desiredWindowWidth, desiredWindowHeight);
+    }
+
+    private boolean measureHierarchy(host, lp, res, desiredWindowWidth, desiredWindowHeight) {
+        ...
+        final DisplayMetrics packageMetrics = res.getDisplayMetrics();
+            childWidthMeasureSpec = getRootMeasureSpec(desiredWindowWidth, lp.width);
+            childHeightMeasureSpec = getRootMeasureSpec(desiredWindowHeight, lp.height);
+            performMeasure(childWidthMeasureSpec, childHeightMeasureSpec);
+        ...
+    }
+
+    private void performMeasure(int childWidthMeasureSpec, int childHeightMeasureSpec) {
+        mView.measure(childWidthMeasureSpec, childHeightMeasureSpec);
+    }
+}
+```
+
+其中 `measure(...)` 方法中有一个默认的根据测量规格计算大小的实现, 即 `onMeasure()` 方法, 它会直接使用所提供的测量规格提供的大小. (因为一般传入的模式不会是 `MeasureSpec.UNSPECIFIED`)
+
+#### `onLayout` 方法
+
+每个视图都有一个 `onLayout` 方法, 用于布局当前视图相对于父视图的位置, 并通过 `setFrame(left, top, right, bottom)` 方法设置视图的最终位置. 视图的位置由四个坐标值组成: 左上角的 x 坐标和 y 坐标, 右下角的 x 坐标和 y 坐标, 其最终位置取决于设置的坐标, 分别对应以下四个属性:
+- `mLeft——View.getLeft()`: 当前视图的左边界到父视图的左边界的距离
+- `mTop——View.getTop()`: 当前视图的顶部到父视图顶部的距离
+- `mRight——View.getRight()`: 当前视图的右边界到父视图的左边界的距离
+- ``mBottom——View.getBottom(): 当前视图的底部到父视图的顶部的距离
+
+```java
+public void layout(int l, int t, int r, int b) {
+    ...
+    int oldL = mLeft;
+    int oldT = mTop;
+    int oldB = mBottom;
+    int oldR = mRight;
+    boolean changed = setFrame(l, t, r, b);
+    if (changed) {
+        onLayout(changed, l, t, r, b);
+    }
+}
+
+protected void onLayout(boolean changed, int left, int top, int right, int bottom) {
+}
+
+protected boolean setFrame(int left, int top, int right, int bottom) {
+    boolean changed = false;
+
+    if (mLeft != left || mRight != right || mTop != top || mBottom != bottom) {
+        changed = true;
+
+        int oldWidth = mRight - mLeft;
+        int oldHeight = mBottom - mTop;
+        int newWidth = right - left;
+        int newHeight = bottom - top;
+        boolean sizeChanged = (newWidth != oldWidth) || (newHeight != oldHeight);
+
+        invalidate(sizeChanged);
+
+        mLeft = left;
+        mTop = top;
+        mRight = right;
+        mBottom = bottom;
+        mRenderNode.setLeftTopRightBottom(mLeft, mTop, mRight, mBottom);
+    }
+    return changed;
+}
+
+
+```
+
+最根源的父视图是 `Activity` 绑定的 `Window` 视窗内的 `DecorView`. 与 `onMeasure` 方法的介绍类似, `DecorView` 可以通过触发绑定的 `ViewRootImpl` 对象的 `performTraversals()` 方法来重新布局自己的子视图. 默认的根布局区域就是 `onMeasure` 方法中确定的测量大小所占区域.
+
+```java
+public final class ViewRootImpl ... {
+    private void performTraversals() {
+        windowSizeMayChange |= measureHierarchy(mView, layoutParams, contextResources,
+                desiredWindowWidth, desiredWindowHeight);
+        
+        if (mWidth != frame.width() || mHeight != frame.height()) {
+            mWidth = frame.width();
+            mHeight = frame.height();
+        }
+        performLayout(lp, mWidth, mHeight);
+    }
+
+    private void performLayoutWindowManager.LayoutParams lp, int desiredWindowWidth,
+            int desiredWindowHeight {
+        mView.layout(0, 0, mView.getMeasuredWidth(), mView.getMeasuredHeight());
+
+        // 这里如果布局失败, 会尝试使用 desiredWindowWidth 和 desiredWindowHeight 参数重新计算视图大小, 并重新布局
+    }
+}
+```
+
+#### `getMeasuredWidth` 和 `getWidth` 方法的区别
+
+- `getMeasureWidth()` 方法在 `measure()` 过程结束后就可以获得到它的值.
+- `getWidth()` 方法要在 `layout()`过程结束后才能获取到.
+
+自定义控件的时候在 `onLayout` 方法中一般采用 `getMeasuredWidth` 来获得控件的宽度.
+在除了 `onLayout` 之外的方法中采用 `getWidth` 方法来获取控件的宽度.
+
+
+```java
+public class View ... {
+    public final int getMeasuredWidth() {
+        return mMeasuredWidth & MEASURED_SIZE_MASK;
+    }
+
+    public final int getWidth() {
+        return mRight - mLeft;
+    }
+}
+```
+
+#### TextPaint
+
+`TextPaint` 是 `Paint` 的子类, 用于绘制文本的画笔. `TextPaint` 除了继承了 `Paint` 的所有属性和方法外, 还有一些专门用于绘制文本的属性和方法.
+
+- `TextPaint.setTextSize(float textSize)`: 设置文本大小
+- `TextPaint.setTypeface(Typeface typeface)`: 设置字体样式
+- `TextPaint.setUnderlineText(boolean underlineText)`: 设置是否显示下划线
+- `TextPaint.setStrikeThruText(boolean strikeThruText)`: 设置是否显示删除线
+
+文本的基本信息 `Paint.FontMetrics`:
+- `baseline`: 基线, 文本绘制的基准线, 用于绘制文本的起始位置
+- `ascent`: 文本中字符的最高点到基线的距离
+- `descent`: 文本中字符的最低点到基线的距离
+- `top`: 文本中字符可以达到的最高点到基线的距离
+- `leading`: 
+
+文本居中的计算方法: `int baseline = viewHeight / 2 + (fontMetrics.descent - fontMetrics.ascent) / 2 - fontMetrics.descent;`
 
 ### 动画和过渡
 
 > [!cite]
-> https://developer.android.com/guide/fragments/animate
+> 
+> [](https://developer.android.com/guide/fragments/animate)
+> [Frame Animation（逐帧动画）](https://developer.aliyun.com/article/567019)
+
+#### Frame动画(帧动画)
+
+帧动画: 通过一系列的图片帧来实现动画效果, 适用于帧数较少的动画效果
+- 动画文件定义位置: `res/drawable/`
+- 动画启动尽量在 `onWindowFocusChanged` 方法中启动, 以避免动画启动时界面未绘制完成的问题
+
+```kotlin
+// rocket_thrust_anim.xml
+<?xml version="1.0" encoding="utf-8"?>
+<animation-list 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    <-- 动画是否只播放一次 --/>
+    android:oneshot="false"
+    >
+    <item android:drawable="@drawable/rocket_thrust1" android:duration="200" />
+    <item android:drawable="@drawable/rocket_thrust2" android:duration="200" />
+    <item android:drawable="@drawable/rocket_thrust3" android:duration="200" />
+</animation-list>
+
+<ImageView
+    android:id="@+id/rocket_image"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/rocket_thrust_anim" />
+
+// 使用
+ImageView rocketImage = (ImageView) findViewById(R.id.rocket_image);
+rocketImage.setBackgroundResource(R.drawable.rocket_thrust);
+AnimationDrawable rocketAnimation = (AnimationDrawable) rocketImage.getBackground();
+rocketAnimation.start();
+```
+
+#### Tween Animation（补间动画）
+
+#### Property Animation（属性动画）
+
+#### 布局动画
+
 
 ## 网络库(HttpURLConnection, OkHttp, Retrofit, 内部库)
 
