--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -1826,6 +1826,7 @@ public class View ... {
 帧动画: 通过一系列的图片帧来实现动画效果, 适用于帧数较少的动画效果
 - 动画文件定义位置: `res/drawable/`
 - 动画启动尽量在 `onWindowFocusChanged` 方法中启动, 以避免动画启动时界面未绘制完成的问题
+- 使用时以 `ImageView` 为载体, 通过 `ImageView.setBackgroundResource()` 方法设置动画资源, 并通过将背景转换为 `AnimationDrawable` 对象来启动动画
 
 ```kotlin
 // rocket_thrust_anim.xml
@@ -1853,9 +1854,222 @@ AnimationDrawable rocketAnimation = (AnimationDrawable) rocketImage.getBackgroun
 rocketAnimation.start();
 ```
 
-#### Tween Animation（补间动画）
+#### Tween Animation（补间动画, 平移, 缩放, 旋转, 透明度）
+> [!cite]
+>
+> [Tween(补间动画)完全解析](https://blog.csdn.net/dmk877/article/details/51912104)
+
+补间动画: 通过对视图的属性进行动画操作, 适用于简单的动画效果
+- 动画文件定义位置: `res/anim/`
+- 使用时以 `View` 为载体, 通过 `View.startAnimation()` 方法启动动画
+
+```xml
+<translation xmlns:android="http://schemas.android.com/apk/res/android"
+    // 平移动画
+    android:fromXDelta="0" // 起始位置 x 坐标 (px值, 百分比值, 百分比 p 值)
+    android:toXDelta="100" // 结束位置 x 坐标
+    android:fromYDelta="0" // 起始位置 y 坐标
+    android:toYDelta="100" // 结束位置 y 坐标
+
+// 百分比 p 值表示相对于父容器宽或高的百分比值, 0% 表示起始位置, 100% 表示结束位置
+/>
+
+<scale xmlns:android="http://schemas.android.com/apk/res/android"
+    // 缩放动画
+    android:fromXScale="1.0" // 起始 x 缩放比例, 0-1 缩小, 1-∞ 放大
+    android:toXScale="0.5" // 结束 x 缩放比例
+    android:fromYScale="1.0" // 起始 y 缩放比例
+    android:toYScale="0.5" // 结束 y 缩放比例
+
+    android:pivotX="50%" // 视图缩放的中心 x 坐标 (px 值, 百分比值, 百分比 p 值)
+    android:pivotY="50%" // 视图缩放的中心 y 坐标
+/>
+
+<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    // 旋转动画
+    android:fromDegrees="0" // 起始角度
+    android:toDegrees="360" // 结束角度
+    android:pivotX="50%" // 旋转中心 x 坐标 (px 值, 百分比值, 百分比 p 值)
+    android:pivotY="50%" // 旋转中心 y 坐标
+/>
+
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+    // 透明度动画
+    android:fromAlpha="1.0" // 起始透明度
+    android:toAlpha="0.0" // 结束透明度
+/>
+
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    // 组合动画
+    android:shareInterpolator="true" // 是否共享插值器, false 时需要为每个子动画设置插值器
+    android:ordering="together" // 动画执行顺序, together 为同时执行, sequential 为顺序执行. 可以通过 startOffset 属性自定义每个动画开始前的延迟时间
+>
+
+    <alpha
+        ...
+    />
+
+    <scale
+        ...
+    />
+
+    ...
+
+</set>
+
+<any 
+    // 通用属性
+    android:duration="1000" // 动画持续时间
+    android:startOffset="1000" // 动画开始前的延迟时间
+    android:fillBefore="true" // 动画结束后是否回到初始状态, 默认为 true
+    android:fillEnabled="true" // 是否启用 fillBefore, 默认为 true
+    android:fillAfter="true" // 动画结束后是否保持结束状态, 默认为 false, 优先于 fillBefore
+    android:repeatCount="infinite" // 动画重复次数, 默认为 0, 0 为不重复, -1 为无限重复
+    android:repeatMode="reverse" // 动画重复模式, 默认为 restart, reverse 为反向重复
+    android:interpolator="@android:anim/accelerate_decelerate_interpolator" // 动画插值器
+/>
+```
+
+默认可用的插值器:
+- `@android:anim/linear_interpolator`: 线性匀速
+- `@android:anim/decelerate_interpolator`: 减速
+- `@android:anim/accelerate_interpolator`: 加速
+- `@android:anim/overshoot_interpolator`: 快速超出终点一小步后回弹到终点
+- `@android:anim/anticipate_interpolator`: 先回退一小步再加速
+- `@android:anim/accelerate_decelerate_interpolator`: 先加速后减速
+- `@android:anim/anticipate_overshoot_interpolator`: 先回退一小步再加速, 最后超出重点一小步后回弹到终点
+- `@android:anim/bounce_interpolator`: 加速到终点后持续弹跳直至停止
+- `@android:anim/cycle_interpolator`: 周期运动
+
+```xml
+// 自定义插值器
+<linearInterpolator xmlns:android="http://schemas.android.com/apk/res/android" /> // 无法自定义参数
+<decelerate_interpolator xmlns:android="http://schemas.android.com/apk/res/android" android:factor="2" /> // 可设置减速因子
+<accelerate_interpolator xmlns:android="http://schemas.android.com/apk/res/android" android:factor="2" /> // 可设置加速因子
+<overshootInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:tension="2" /> // 可设置超出终点后的张力(回拉力)
+<anticipate_interpolator xmlns:android="http://schemas.android.com/apk/res/android" android:tension="2" /> // 可设置回退一小步的张力
+<accelerateDecelerateInterpolator xmlns:android="http://schemas.android.com/apk/res/android" /> // 无法自定义参数
+<anticipateOvershootInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:tension="2" android:extraTension="2" /> // 可设置回退一小步的张力和超出终点后的张力
+<bounceInterpolator xmlns:android="http://schemas.android.com/apk/res/android" /> // 无法自定义参数
+<cycleInterpolator xmlns:android="http://schemas.android.com/apk/res/android" android:cycles="2" /> // 
+```
 
 #### Property Animation（属性动画）
+
+属性动画: 通过对视图的属性进行动画操作, 适用于复杂的动画效果. 
+- 针对属性值进行动画操作, 因此适用于任何对象的任何属性, 而不仅限于平移, 缩放, 旋转, 透明度等.
+- 动画操作可以针对于对象本身, 而不是如补间动画那样只是改变了视图对象的显示效果.
+- 属性动画支持所有的通用属性, 如动画持续时间, 动画插值器等.
+
+**代码使用方式**
+
+- `ValueAnimator`
+
+构造时直接传入起始值, 中间值(可选, 可多个), 结束值. 使用时需要通过动画监听器来监听动画过程中属性值的变化, 并在监听器中根据当前属性值来更新目标对象的属性值(如视图的位置), 从而实现动画效果. 注意动画监听器有两种, 一种是专属 `ValueAnimator`的 `AnimatorUpdateListener` 用于监听动画过程中属性值的变化, 另一种是 `AnimatorListener` 用于监听动画的开始, 结束, 取消, 重复等事件.
+
+```kotlin
+// 创建 ValueAnimator 对象
+val valueAnimator = ValueAnimator.ofInt(0, 100).apply {
+    // 设置动画持续时间
+    duration = 1000
+    // 设置动画插值器
+    interpolator = AccelerateDecelerateInterpolator()
+    // 添加动画监听器
+    addUpdateListener {
+        val value = it.animatedValue as Int
+        view.layout(value, value, value + view.width, value + view.height)
+    }
+}
+// 启动动画
+valueAnimator.start()
+```
+
+- `ObjectAnimator`
+
+`ObjectAnimator` 是 `ValueAnimator` 的子类, 用于对对象的属性进行动画操作. 构造时需要传入目标对象, 属性名称, 起始值, 中间值(可选, 可多个), 结束值. 使用时直接调用 `start()` 方法启动动画. 注意对象属性必须可以 get 和 set.
+
+```kotlin
+// 创建 ObjectAnimator 对象
+val objectAnimator = ObjectAnimator.ofFloat(view, "translationX", 0f, 100f).apply {
+    // 设置动画持续时间
+    duration = 1000
+    // 设置动画插值器
+    interpolator = AccelerateDecelerateInterpolator()
+}
+// 启动动画
+objectAnimator.start()
+```
+
+
+- `TimeAnimator`
+
+`TimeAnimator` 是 `ValueAnimator` 的子类, 用于监听动画过程中的时间变化. 使用时需要通过动画监听器来监听动画过程中时间的变化, 并在监听器中根据当前时间来更新目标对象的属性值, 从而实现动画效果. 注意动画监听器有两种, 一种是专属 `TimeAnimator`的 `TimeListener` 用于监听动画过程中时间的变化, 另一种是 `AnimatorListener` 用于监听动画的开始, 结束, 取消, 重复等事件.
+
+```kotlin
+// 创建 TimeAnimator 对象
+val timeAnimator = TimeAnimator().apply {
+    // 添加动画监听器
+    setTimeListener { animation, totalTime, deltaTime ->
+        view.layout(deltaTime.toInt(), deltaTime.toInt(), deltaTime.toInt() + view.width, deltaTime.toInt() + view.height)
+    }
+}
+// 启动动画
+timeAnimator.start()
+```
+
+- `AnimatorSet`
+
+借助 `AnimatorSet` 可以将多个动画组合在一起, 并设置它们的执行顺序, 重复次数, 重复模式等. 使用时需要通过 `play()` 方法将多个动画添加到 `AnimatorSet` 中, 然后通过 `start()` 方法启动动画.
+
+```kotlin
+// 创建 ObjectAnimator 对象
+val objectAnimator1 = ...
+val objectAnimator2 = ...
+val objectAnimator3 = ...
+val objectAnimator4 = ...
+val objectAnimator5 = ...
+
+// 创建 AnimatorSet 对象
+val animatorSet = AnimatorSet().apply {
+    // 设置动画执行顺序
+    play(objectAnimator1).before(objectAnimator2)
+    playTogether(objectAnimator2, objectAnimator3).before(objectAnimator4)
+    playSequentially(objectAnimator4, objectAnimator5)
+    // 设置动画重复次数
+    repeatCount = ValueAnimator.INFINITE
+    // 设置动画重复模式
+    repeatMode = ValueAnimator.REVERSE
+}
+// 启动动画
+animatorSet.start()
+```
+
+**xml 使用方式**
+
+- 动画文件定义位置: `res/animator/`
+- 使用时需要每个动画都需要绑定目标对象的属性名称, 并通过 `setTarget()` 方法绑定目标对象, 然后再通过 `start()` 方法启动动画.
+
+```xml
+<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+    android:propertyName="translationX" // 动画属性名称
+    android:valueFrom="0" // 起始值
+    android:valueTo="100" // 结束值
+    android:valueType="floatType" // 属性值类型
+/>
+
+<any 
+    // 通用属性
+    android:duration="1000" // 动画持续时间
+    android:startOffset="1000" // 动画开始前的延迟时间
+    android:fillBefore="true" // 动画结束后是否回到初始状态, 默认为 true
+    android:fillEnabled="true" // 是否启用 fillBefore, 默认为 true
+    android:fillAfter="true" // 动画结束后是否保持结束状态, 默认为 false, 优先于 fillBefore
+    android:repeatCount="infinite" // 动画重复次数, 默认为 0, 0 为不重复, -1 为无限重复
+    android:repeatMode="reverse" // 动画重复模式, 默认为 restart, reverse 为反向重复
+    android:interpolator="@android:anim/accelerate_decelerate_interpolator" // 动画插值器
+/>
+
+```
 
 #### 布局动画
 
